<?xml version = "1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MillenialApp</string>
    <string name="profile_name">Profile</string>
    <string name="editprofile_name">Profile Info</string>
    <string name="feeds_name">Feed</string>
    <string name="assignment_name">Assignments</string>
    <string name="message_name">Messages</string>
    <string name="result_name">Results</string>
    <string name="forum_name">Forum</string>
    <string name="reward_name">Rewards</string>
    <string name="reward_history_name">Reward History</string>
    <string name="information_name">Instructions</string>
    <string name="show_history">VIEW HISTORY</string>
    <string name="privacypolicy">priti setting App</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="title_section1">Assignments</string>
    <string name="title_section2">Messages</string>
    <string name="title_section3">Forum</string>
    <string name="title_section4">Feed</string>
    <string name="title_section5">Results</string>
    <string name="title_section6">Rewards</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_launch_activity__nav_drawer">LaunchActivity_NavDrawer</string>

    <string name="hello_world">Hello world!</string>
    <string name="openDrawer">Drawer Open</string>
    <string name="closeDrawer">Drawer Close</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_up">You don\'t have account? SIGN UP</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="user_title">Administrator</string>
    <string name="edit_profile_btn">EDIT PROFILE</string>
    <string name="require_email">Email</string>
    <string name="require_username">Username</string>
    <string name="require_password">Password</string>
    <string name="require_confirmpassword">Confirm Password</string>
    <string name="require_sign_up">SIGN UP</string>

    <string name="profile_header">Profile</string>
    <string name="edit_profile_header">Edit Profile</string>
    <string name="editprofile_first">First Name</string>
    <string name="editprofile_last">Last Name</string>
    <string name="editprofile_mail">Email address</string>
    <string name="editprofile_month">Month</string>
    <string name="editprofile_day">Day</string>
    <string name="editprofile_year">Year</string>
    <string name="editprofile_gender">Gender</string>
    <string name="editprofile_zip">Zip Code</string>
    <string name="editprofile_mobile">Mobile Number</string>
    <string name="editprofile_btn">SAVE</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_user_setting">Settings</string>
    <string-array name="genderarray">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="montharray">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="dayarray">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

</resources>
