<?xml version = "1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

            <EditText android:id="@+id/signupemail" android:layout_width="250dp"
                android:layout_height="wrap_content" android:hint="@string/require_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" android:layout_marginTop="100dp"
                android:layout_gravity="center"/>

            <EditText android:id="@+id/signupusername" android:layout_width="250dp"
                android:layout_height="wrap_content" android:hint="@string/require_username"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" android:layout_gravity="center"/>

            <EditText android:id="@+id/signuppassword" android:layout_width="250dp"
                android:layout_height="wrap_content" android:hint="@string/require_password"
                android:imeActionId="@+id/login" android:layout_gravity="center"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <EditText android:id="@+id/signupconfirmpassword" android:layout_width="250dp"
                android:layout_height="wrap_content" android:hint="@string/require_confirmpassword"
                android:imeActionId="@+id/login" android:layout_gravity="center"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <Button android:id="@+id/sign_up_btn" style="?android:textAppearanceSmall"
                android:layout_width="250dp" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/require_sign_up"
                android:textStyle="bold" android:layout_gravity="center"/>

 </LinearLayout>



