<?xml version = "1.0" encoding="utf-8"?>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

            <EditText android:id="@+id/username" android:layout_width="250dp"
                android:layout_height="wrap_content" android:hint="@string/prompt_username"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:layout_marginTop="250dp" android:layout_gravity="center"
                android:singleLine="true" />

            <EditText android:id="@+id/password" android:layout_width="250dp"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/login" android:layout_gravity="center"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <Button android:id="@+id/username_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="250dp" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                android:textStyle="bold" android:layout_gravity="center"/>

            <TextView android:id="@+id/username_sign_up_button" style="?android:textAppearanceSmall"
                android:layout_width="250dp" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_sign_up"
                android:textSize="7.5pt" android:clickable="true"
                android:layout_gravity="center" android:textAlignment="center" />

</LinearLayout>




